--- a/templates/searchform.html
+++ b/templates/searchform.html
@@ -6,7 +6,7 @@
 <body>
     <form method="get" action="/searchform">
         <input type="text" name="q" />
-        <input type="submit" value="search" />
+        <input type="submit" value="search something" />
     </form>
 </body>
 </html>
